@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PTYTextView.h,v 1.19 2004-02-24 19:49:18 ujwal Exp $
+// $Id: PTYTextView.h,v 1.20 2004-02-24 22:49:51 yfabian Exp $
 //
 /*
  **  PTYTextView.h
@@ -202,6 +202,7 @@ typedef struct
 - (void) scrollPageDown: (id) sender;
 - (void) scrollHome;
 - (void) scrollEnd;
+- (void) scrollToSelection;
 
     // Save method
 - (void) saveDocumentAs: (id) sender;
@@ -235,6 +236,12 @@ typedef struct
 
 - (unsigned int) _checkForSupportedDragTypes:(id <NSDraggingInfo>) sender;
 - (void) _savePanelDidEnd: (NSSavePanel *) theSavePanel returnCode: (int) theReturnCode contextInfo: (void *) theContextInfo;
+
+- (void)scrollToLine:(int)line;
+
+- (void)renderChar:(NSImage *)image withChar:(unichar) carac withColor:(NSColor*)color withFont:(NSFont*)aFont bold:(int)bold;
+- (NSImage *) getCharImage:(unichar) code color:(int)fg doubleWidth:(BOOL) dw;
+- (void) drawCharacter:(unichar)c fgColor:(int)fg AtX:(float)X Y:(float)Y doubleWidth:(BOOL) dw;
 
 @end
 
